client/packages/widget-iframe/css/_widgetBubble.scss
#widgetBubbleRow {
	max-width: 100%;
	display: flex;
	gap: 5px;
}

#widgetBubbleWrapper {
	position: relative;
	width: var(--widget-size);
	min-width: var(--widget-size);
	height: var(--widget-size);
	min-height: var(--widget-size);
	filter: drop-shadow(0 1px 2px #00000018) drop-shadow(0 2px 6px #00000016);
}

#widgetBubbleWrapper.active-semiRounded::after {
	content: '';
	position: absolute;
	top: 1px;
	right: 1px;
	width: 8px;
	height: 8px;
	background-color: var(--widget-active-badge-color);
	border-radius: 50%;
	border: 1px solid #fff;
}

#widgetBubbleWrapper.active-rounded::after {
	content: '';
	position: absolute;
	top: -3px;
	right: -3px;
	width: 8px;
	height: 8px;
	background-color: var(--widget-active-badge-color);
	border-radius: 50%;
	border: 1px solid #fff;
}

#widgetBubbleWrapper.active-circle::after {
	content: '';
	position: absolute;
	top: 3px;
	right: 3px;
	width: 8px;
	height: 8px;
	background-color: var(--widget-active-badge-color);
	border-radius: 50%;
	border: 1px solid #fff;
}

#widgetBubbleWrapper.active-square::after {
	content: '';
	position: absolute;
	top: -3px;
	right: -3px;
	width: 8px;
	height: 8px;
	background-color: var(--widget-active-badge-color);
	border-radius: 50%;
	border: 1px solid #fff;
}

#widgetBubble {
	color: #fff;
	cursor: pointer;
	height: 100%;
	width: 100%;
	position: relative;
	overflow: hidden;
	display: flex;
	align-items: center;
	justify-content: center;
	background-color: var(--widget-color);
	border: none;

	&:focus-visible {
		outline-offset: 2px;
		outline-style: dashed;
		outline-width: 2px;
	}

	&.semiRounded {
		mask: url('../public/images/widget-button-mask.svg') no-repeat;
		-webkit-mask: url('../public/images/widget-button-mask.svg') no-repeat;
		// border-radius: 40%;
	}

	&.rounded {
		border-radius: 10px;
	}

	&.circle {
		border-radius: 50%;
	}

	&.square {
		border-radius: none;
	}

	&::after {
		content: '';
		position: absolute;
		top: 0;
		left: 0;
		height: 100%;
		width: 100%;
		background-image: url('../public/images/close-icon.svg');
		background-repeat: no-repeat;
		background-position: center;
		background-size: 30%;
		filter: brightness(0) var(--widget-bubble-icon-color);
		opacity: 0;
		transition: opacity 0.15s ease-out;
	}

	&.open {
		#widget-img {
			opacity: 0;
			transition: opacity 0.15s ease-out;
		}

		& ~ #credit {
			display: inline-block;

			a {
				text-decoration: none;
				color: inherit;
			}
		}

		&::after {
			opacity: 1;
			transition: opacity var(--transition-duration) ease-in;
		}
	}
}

#widget-img {
	transition: opacity var(--transition-duration) ease-in;

	&.icon {
		width: 55%;
		height: 55%;
		object-fit: contain;
		filter: var(--widget-bubble-icon-color);
	}

	&.image {
		width: 100%;
		height: 100%;
		object-fit: cover;
		object-position: center;
	}

	&::selection {
		background: transparent;
	}
}

// Wiggle
.--wiggle-animation {
	animation: 1s wiggle ease infinite;
	animation-delay: var(--animation-delay);
}

@keyframes wiggle {
	0% {
		transform: rotate(-3deg);
		// box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
	}
	20% {
		transform: rotate(20deg);
	}
	40% {
		transform: rotate(-15deg);
	}
	60% {
		transform: rotate(5deg);
	}
	90% {
		transform: rotate(-1deg);
	}
	100% {
		transform: rotate(0);
		// box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
	}
}

// JUMP
.--jump-animation {
	animation: 0.4s jump ease infinite alternate;
	animation-delay: var(--animation-delay);
}

@keyframes jump {
	0% {
		transform: scale(1);
		box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
		border-radius: 50%;
	}
	100% {
		transform: scale(1.05);
		box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
		border-radius: 50%;
	}
}

// Shockwave
.--shockwave-animation {
	animation: shockwaveJump 1s ease-out infinite;
	animation-delay: var(--animation-delay);

	&:after {
		animation: shockwave 1s 0.65s ease-out infinite;
	}

	&:before {
		animation: shockwave 1s 0.5s ease-out infinite;
	}
}

@keyframes shockwaveJump {
	0% {
		transform: scale(1);
	}
	40% {
		transform: scale(1.08);
	}
	50% {
		transform: scale(0.98);
	}
	55% {
		transform: scale(1.02);
	}
	60% {
		transform: scale(0.98);
	}
	100% {
		transform: scale(1);
	}
}

